Update gitignore file

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,19 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+/.idea
 .DS_Store
 /build
 /captures
-.externalNativeBuild
+
+# Signing files
+/.signing/
+
+# OS-specific files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Thumbs.db
+ehthumbs.db
